# EchoMind

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: safety_scan.yml
src/api/: __init__.py
src/api/GUI/: __init__.py
src/api/sdk/: __init__.py
src/api/telegram/: __init__.py
src/api/v1/: __init__.py
src/automl/: optimizer.py
src/chunker/: chunker.py
src/configs/: const.py  custom_error.py
src/core/embeddings_models/: __init__.py  base_embedder.py  config.py  model_config.py  model_selector.py
src/core/embeddings_models/dense_vector/: __init__.py  base_vector_model.py  dense_embedder.py
src/core/embeddings_models/multimodal_embedder/: __init__.py
src/core/embeddings_models/sparse_vector/: __init__.py  sparse_embedder.py
src/core/generation/: __init__.py  api_llm.py  local_llm.py  prompt_builder.py
src/core/reranking/: __init__.py  cross_encoder.py  multimodal_reranker.py
src/core/retrieval/: __init__.py  audio_retriever.py  dense_retriever.py  graph_retriever.py  hybrid_retriever.py  image_retriever.py  query_processor.py  sparse_retriever.py  video_retriver.py
src/evaluation/benchmarks/: __init__.py
src/evaluation/metrics/: __init__.py  retrieval_metrics.py
src/evaluation/monitoring/: __init__.py
src/ingestion/chunkers/: __init__.py
src/ingestion/data_processors/: __init__.py
src/ingestion/loaders/: __init__.py
src/ingestion/parsers/: __init__.py
src/ingestion/parsers/type_parser/: md_parser.py
src/storage/cache/: __init__.py
src/storage/db/: __init__.py
src/storage/graph_db/: __init__.py  entity_extractor.py  graph_builder.py
src/storage/vector_dbs/: __init__.py
src/tools/: const.py  self_logger.py  tools.py
src/vector_client/: vector_client.py
src/vector_way/: chunker.py  start_embendings.py
